--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.125 2001/03/14 16:41:26 skrll Exp $
+# $NetBSD: Makefile,v 1.126 2001/03/16 00:37:10 manu Exp $
 #
 
 COMMENT=	Graphics tools and libraries
@@ -12,6 +12,7 @@ SUBDIR+=	MesaLib
 SUBDIR+=	Ngraph
 SUBDIR+=	alevt
 SUBDIR+=	autotrace
+SUBDIR+= blender
 SUBDIR+=	camediaplay
 SUBDIR+=	cdlabelgen
 SUBDIR+=	clanlib
