--- a/mk/Linux.x11.dist
+++ b/mk/Linux.x11.dist
@@ -1,4 +1,4 @@
-#     $NetBSD: Linux.x11.dist,v 1.2 2000/12/18 02:32:12 kei Exp $
+#     $NetBSD: Linux.x11.dist,v 1.3 2001/03/16 17:20:55 tron Exp $
 #     FreeBSD Id: BSD.x11.dist,v 1.2 1997/06/10 07:55:10 asami Exp
 #
 
@@ -284,6 +284,8 @@
         doc
         ..
         examples
+        ..
+	fonts
         ..
     ..
 ..
