--- a/mk/NetBSD.x11.dist
+++ b/mk/NetBSD.x11.dist
@@ -1,4 +1,4 @@
-#     $NetBSD: NetBSD.x11.dist,v 1.5 2000/12/18 02:32:12 kei Exp $
+#     $NetBSD: NetBSD.x11.dist,v 1.6 2001/03/16 17:20:55 tron Exp $
 #     FreeBSD Id: BSD.x11.dist,v 1.2 1997/06/10 07:55:10 asami Exp
 #
 
@@ -287,5 +287,7 @@
         ..
         examples
         ..
+	fonts
+	..
     ..
 ..
