--- a/mk/SunOS.x11.dist
+++ b/mk/SunOS.x11.dist
@@ -1,4 +1,4 @@
-#     $NetBSD: SunOS.x11.dist,v 1.2 2000/12/18 02:32:12 kei Exp $
+#     $NetBSD: SunOS.x11.dist,v 1.3 2001/03/16 17:20:56 tron Exp $
 #     FreeBSD Id: BSD.x11.dist,v 1.2 1997/06/10 07:55:10 asami Exp
 #
 
@@ -285,5 +285,7 @@
         ..
         examples
         ..
+	fonts
+	..
     ..
 ..
