--- a/chat/bnc/Makefile
+++ b/chat/bnc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2001/03/06 18:39:51 wiz Exp $
+# $NetBSD: Makefile,v 1.2 2001/03/16 20:51:13 zuntum Exp $
 # FreeBSD Id: ports/irc/bnc/Makefile,v 1.9 2000/05/22 06:38:58 will Exp
 
 DISTNAME=	bnc2.8.2
@@ -7,7 +7,7 @@ CATEGORIES=	chat
 MASTER_SITES=	http://hometown.psn.net/~andrews/dist/			\
 		http://zuntum.eik.pl/distfiles/
 
-MAINTAINER=	zuntum@eik.pl
+MAINTAINER=	zuntum@netbsd.org
 HOMEPAGE=	http://bnc.dragondata.com
 COMMENT=	Simple IRC relay proxy with support for virtual hosting
 
