--- a/misc/gone/Makefile
+++ b/misc/gone/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.2 2001/02/17 18:09:05 wiz Exp $
+# $NetBSD: Makefile,v 1.3 2001/03/16 20:53:03 zuntum Exp $
 # FreeBSD Id: ports/misc/gone/Makefile,v 1.8 2001/01/16 17:31:40 sobomax Exp
 
 DISTNAME=	gone-1.3.1
 CATEGORIES=	misc
 MASTER_SITES=	http://jaguar.ir.miami.edu/~marcus/
 
-MAINTAINER=	zuntum@eik.pl
+MAINTAINER=	zuntum@netbsd.org
 HOMEPAGE=	http://jaguar.ir.miami.edu/~marcus/
 COMMENT=	Terminal locking utility with many improvements over lock(1)
 
