--- a/misc/loco/Makefile
+++ b/misc/loco/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.1.1.1 2001/03/12 10:08:25 zuntum Exp $
+# $NetBSD: Makefile,v 1.2 2001/03/16 20:53:03 zuntum Exp $
 #
 
 DISTNAME=	loco-0.32
 CATEGORIES=	misc
 MASTER_SITES=	http://zjuul.net/~jules/loco/
 
-MAINTAINER=	zuntum@eik.pl
+MAINTAINER=	zuntum@netbsd.org
 HOMEPAGE=	http://zjuul.net/~jules/loco/
 COMMENT=	Colorize file or standard input and print on the standard output
 
