--- a/misc/pdmenu/Makefile
+++ b/misc/pdmenu/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2001/02/21 02:34:58 hubertf Exp $
+# $NetBSD: Makefile,v 1.6 2001/03/16 20:53:04 zuntum Exp $
 # FreeBSD Id: ports/misc/pdmenu/Makefile,v 1.11 2001/01/16 17:31:42 sobomax Exp
 
 DISTNAME=	${PKGNAME:S|-|_|}
@@ -6,7 +6,7 @@ PKGNAME=	pdmenu-1.2.65
 CATEGORIES=	misc
 MASTER_SITES=	http://kitenet.net/programs/code/pdmenu/
 
-MAINTAINER=	zuntum@eik.pl
+MAINTAINER=	zuntum@netbsd.org
 HOMEPAGE=	http://www.kitenet.net/programs/pdmenu/
 COMMENT=	Simple console menu program
 
