--- a/net/djbdns/Makefile
+++ b/net/djbdns/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2001/03/06 16:13:36 hubertf Exp $
+# $NetBSD: Makefile,v 1.12 2001/03/16 20:53:04 zuntum Exp $
 # FreeBSD Id: ports/net/djbdns/Makefile,v 1.4 2000/09/28 18:18:41 nbm Exp
 
 DISTNAME=	djbdns-1.05
@@ -17,7 +17,7 @@ PATCH_SITES=	http://www.fefe.de/dns/
 PATCHFILES=	${DISTNAME}-ipv6.diff.bz2
 PATCH_DIST_STRIP=       -p1
 
-MAINTAINER=	zuntum@eik.pl
+MAINTAINER=	zuntum@netbsd.org
 HOMEPAGE=	http://cr.yp.to/djbdns.html
 COMMENT=	Collection of secure and reliable DNS tools by Dan Bernstein
 
