--- a/net/ucspi-tcp/Makefile
+++ b/net/ucspi-tcp/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2001/03/06 15:22:27 hubertf Exp $
+# $NetBSD: Makefile,v 1.5 2001/03/16 20:53:05 zuntum Exp $
 # FreeBSD Id: ports/sysutils/ucspi-tcp/Makefile,v 1.12 2000/07/10 01:41:24 steve Exp
 
 DISTNAME=	ucspi-tcp-0.88
@@ -9,7 +9,7 @@ MASTER_SITES=	http://cr.yp.to/ucspi-tcp/				\
 DISTFILES=	${DISTNAME}.tar.gz					\
 		${DISTNAME}-man.tar.gz
 
-MAINTAINER=	zuntum@eik.pl
+MAINTAINER=	zuntum@netbsd.org
 HOMEPAGE=	http://cr.yp.to/ucspi-tcp.html
 COMMENT=	Command-line tools for building TCP client-server applications
 
