--- a/sysutils/daemontools/Makefile
+++ b/sysutils/daemontools/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2001/03/06 16:16:46 hubertf Exp $
+# $NetBSD: Makefile,v 1.5 2001/03/16 20:53:05 zuntum Exp $
 # FreeBSD Id: ports/sysutils/daemontools/Makefile,v 1.8 2000/12/03 05:16:41 steve Exp
 
 DISTNAME=	daemontools-0.70
@@ -10,7 +10,7 @@ MASTER_SITES=	http://cr.yp.to/daemontools/				\
 DISTFILES=	${DISTNAME}.tar.gz					\
 		${DISTNAME}-man.tar.gz
 
-MAINTAINER=	zuntum@eik.pl
+MAINTAINER=	zuntum@netbsd.org
 HOMEPAGE=	http://cr.yp.to/daemontools.html
 COMMENT=	Service monitoring and logging utilities by djb
 
