--- a/sysutils/dog/Makefile
+++ b/sysutils/dog/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.3 2001/02/26 22:56:46 hubertf Exp $
+# $NetBSD: Makefile,v 1.4 2001/03/16 20:53:05 zuntum Exp $
 # FreeBSD Id: ports/misc/dog/Makefile,v 1.1 2000/06/10 05:45:34 will Exp
 
 DISTNAME=	dog-1.7
 CATEGORIES=	misc
 MASTER_SITES=	http://jl.photodex.com/dog/
 
-MAINTAINER=	zuntum@eik.pl
+MAINTAINER=	zuntum@netbsd.org
 HOMEPAGE=	http://jl.photodex.com/dog/
 COMMENT=	Dog writes the contents of each given file, URL, or stdin
 
