--- a/security/Makefile
+++ b/security/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.67 2001/03/16 15:00:24 agc Exp $
+# $NetBSD: Makefile,v 1.68 2001/03/16 23:44:33 jun Exp $
 #
 
 COMMENT=	Security tools
 
+SUBDIR+=	AiCA
 SUBDIR+=	AiSSLtelnet
 SUBDIR+=	PAM
 SUBDIR+=	aide
