--- a/fonts/jisx0208fonts/Makefile
+++ b/fonts/jisx0208fonts/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2001/02/25 04:17:47 hubertf Exp $
+# $NetBSD: Makefile,v 1.14 2001/03/17 16:49:38 jun Exp $
 #
 
 DISTNAME=	jisx0208fonts-20010112
@@ -90,7 +90,7 @@ post-extract:
 
 # for do-patch
 .if ${USE_KANAME} != YES
-PATCHDIR=	${.CURDIR}/NO-EXIST
+NO_PATCH=	YES
 .endif
 
 pre-install:
