--- a/emulators/uae/Makefile
+++ b/emulators/uae/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.12 2001/02/17 18:38:32 wiz Exp $
+# $NetBSD: Makefile,v 1.13 2001/03/17 19:37:14 kristerw Exp $
 
-DISTNAME=	uae-0.8.15
+DISTNAME=	uae-0.8.16
 CATEGORIES=	emulators
 MASTER_SITES=	ftp://ftp.freiburg.linux.de/pub/uae/sources/develop/
 
