--- a/www/htmllint/Makefile
+++ b/www/htmllint/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.1.1.1 2001/03/14 05:13:04 kei Exp $
+# $NetBSD: Makefile,v 1.2 2001/03/18 14:05:11 kei Exp $
 #
 
 DISTNAME=	htmllint
-PKGNAME=	htmllint-2.32
+PKGNAME=	htmllint-2.36
 CATEGORIES=	www japanese
 MASTER_SITES=	http://openlab.ring.gr.jp/k16/htmllint/archives/
 EXTRACT_SUFX=	.zip
@@ -18,27 +18,29 @@ NO_WRKSUBDIR=	# defined
 NO_CONFIGURE=	# defined
 NO_BUILD=	# defined
 
-CGIDIR=		${PREFIX}/libexec/cgi-bin
-HTMLDIR=	${PREFIX}/share/httpd/htdocs/htmllint
+CGIDIR=		${LOCALBASE}/libexec/cgi-bin
+HTMLDIR=	${LOCALBASE}/share/httpd/htdocs/htmllint
 IMGDIR=		${HTMLDIR}/images
 
 post-patch:
 .for f in faq.html htmllint.cgi htmllint htmllintenv parsedtd.pl tagslist.cgi
-	${MV} ${WRKSRC}/${f} ${WRKSRC}/${f}.orig
+	@${MV} ${WRKSRC}/${f} ${WRKSRC}/${f}.orig; \
 	${SED} -e 's!@PREFIX@!${PREFIX}!g' < ${WRKSRC}/${f}.orig \
 	    > ${WRKSRC}/${f}
 .endfor
 
 do-install:
-	${INSTALL_SCRIPT} ${WRKSRC}/htmllint ${PREFIX}/bin
-	${INSTALL_SCRIPT_DIR} ${CGIDIR}
-	${INSTALL_SCRIPT} ${WRKSRC}/*.cgi ${WRKSRC}/htmllintrc ${CGIDIR}
-	${INSTALL_DATA} ${WRKSRC}/htmllintenv ${CGIDIR}/htmllint.env
-	${INSTALL_SCRIPT_DIR} ${HTMLDIR}
-	${INSTALL_SCRIPT} ${WRKSRC}/*.pl ${WRKSRC}/*.pm ${HTMLDIR}
+	@${INSTALL_SCRIPT} ${WRKSRC}/htmllint ${PREFIX}/bin; \
+	${INSTALL_SCRIPT_DIR} ${CGIDIR}; \
+	${INSTALL_SCRIPT} ${WRKSRC}/*.cgi ${WRKSRC}/htmllintrc ${CGIDIR}; \
+	${INSTALL_DATA} ${WRKSRC}/htmllintenv ${CGIDIR}/htmllint.env.default; \
+	${TEST} -f ${CGIDIR}/htmllint.env || \
+	    ${CP} ${CGIDIR}/htmllint.env.default  ${CGIDIR}/htmllint.env; \
+	${INSTALL_SCRIPT_DIR} ${HTMLDIR}; \
+	${INSTALL_SCRIPT} ${WRKSRC}/*.pl ${WRKSRC}/*.pm ${HTMLDIR}; \
 	${INSTALL_DATA} ${WRKSRC}/*.css ${WRKSRC}/*.dtd ${WRKSRC}/*.ent \
-	    ${WRKSRC}/*.html ${WRKSRC}/*.rul ${WRKSRC}/*.txt ${HTMLDIR}
-	${INSTALL_DATA_DIR} ${IMGDIR}
+	    ${WRKSRC}/*.html ${WRKSRC}/*.rul ${WRKSRC}/*.txt ${HTMLDIR}; \
+	${INSTALL_DATA_DIR} ${IMGDIR}; \
 	${INSTALL_DATA} ${WRKSRC}/*.gif ${IMGDIR}
 
 .include "../../mk/bsd.pkg.mk"
