--- a/net/rp-pppoe/Makefile
+++ b/net/rp-pppoe/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.14 2001/02/27 17:42:15 hubertf Exp $
+# $NetBSD: Makefile,v 1.15 2001/03/18 18:55:28 tron Exp $
 
-DISTNAME=	rp-pppoe-2.6
+DISTNAME=	rp-pppoe-2.8
 CATEGORIES=	net
 MASTER_SITES=	${HOMEPAGE}
 
@@ -13,10 +13,7 @@ CONFLICTS+=	mouse_pppoe<20000912nb1
 GNU_CONFIGURE=	YES
 CONFIGURE_ENV+=	PPPD=${PPPD}
 
-post-install:
-	${INSTALL_DATA_DIR} ${PREFIX}/share/examples/rp-pppoe
-	${INSTALL_DATA} ${WRKSRC}/pppoe.conf ${WRKSRC}/pppoe-server-options \
-	  ${PREFIX}/share/examples/rp-pppoe
+WRKSRC=		${WRKDIR}/${DISTNAME}/src
 
 .include "../../mk/bsd.prefs.mk"
 
@@ -27,5 +24,16 @@ PPPD=		${LOCALBASE}/sbin/pppd
 .else
 PPPD=		/usr/sbin/pppd
 .endif
+
+post-build:
+	${SED} -e 's#$${PREFIX}#${PREFIX}#g' <${FILESDIR}/pppoe.sh \
+	  >${WRKDIR}/pppoe.sh
+
+post-install:
+	${INSTALL_DATA_DIR} ${PREFIX}/share/examples/rp-pppoe
+	cd ${WRKSRC}/../configs && \
+	${INSTALL_DATA} pppoe.conf pppoe-server-options \
+	  ${PREFIX}/share/examples/rp-pppoe
+	${INSTALL_SCRIPT} ${WRKDIR}/pppoe.sh ${PREFIX}/etc/rc.d/pppoe
 
 .include "../../mk/bsd.pkg.mk"
