--- a/editors/abiword/Makefile
+++ b/editors/abiword/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.17 2001/03/19 04:30:22 bad Exp $
+# $NetBSD: Makefile,v 1.18 2001/03/19 04:32:27 bad Exp $
 #
 # According to AbiSource's explanation of their trademark rights,
 # compilations/distributions of AbiWord not provided by AbiSource must
@@ -18,7 +18,7 @@ HOMEPAGE=	http://www.abisource.com/
 COMMENT=	Open Source cross-platform word processor
 
 BUILD_DEPENDS+=	${LOCALBASE}/bin/unzip:../../archivers/unzip
-DEPENDS+=	ispell-*:../../textproc/ispell-base
+DEPENDS+=	ispell-base-*:../../textproc/ispell-base
 DEPENDS+=	gtk+-1.2.*:../../x11/gtk
 DEPENDS+=	png>1.0.9:../../graphics/png
 
