--- a/print/lyx/Makefile
+++ b/print/lyx/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.33 2001/03/19 04:30:23 bad Exp $
+# $NetBSD: Makefile,v 1.34 2001/03/19 04:32:27 bad Exp $
 # FreeBSD Id: Makefile,v 1.14 1998/02/14 16:46:50 andreas Exp
 #
 
@@ -12,7 +12,7 @@ MAINTAINER=		frueauf@netbsd.org
 HOMEPAGE=		http://www.lyx.org/
 COMMENT=		Graphical frontend for LaTeX (nearly WYSIWYG)
 
-DEPENDS=		ispell-3.1.20:../../textproc/ispell-base
+DEPENDS=		ispell-base-*:../../textproc/ispell-base
 DEPENDS+=		teTeX>=1.0.6:../../print/teTeX
 DEPENDS+=		xforms>=0.88nb1:../../x11/xforms
 
