--- a/mk/bulk/build
+++ b/mk/bulk/build
@@ -1,5 +1,5 @@
 #!/bin/sh
-# $NetBSD: build,v 1.9 2001/02/13 23:02:23 dmcmahill Exp $
+# $NetBSD: build,v 1.10 2001/03/19 11:25:39 dmcmahill Exp $
 #
 # Do builk build
 #
@@ -50,7 +50,23 @@ INDEXFILE=`make show-var VARNAME=INDEXFILE`
 ORDERFILE=`make show-var VARNAME=ORDERFILE`
 cd ${USR_PKGSRC}	
 
-# Figure out optimal build order, and build
+# get the list of packages which should always be installed during the build
+cd ${USR_PKGSRC}/pkgtools/pkglint
+BULK_PREREQ=`make show-var VARNAME=BULK_PREREQ`
+cd ${USR_PKGSRC}
+
+# install prerequisite packages.  Note:  we do this _before_ the depends tree
+# because some packages like xpkgwedge only become DEPENDS if its installed
+echo "Installing prerequisite packages specified with BULK_PREREQ..."
+for pkgdir in $BULK_PREREQ
+do
+	echo $pkgdir
+	# make sure its installed _and_ packaged
+	cd ${USR_PKGSRC}/$pkgdir && make bulk-install && make bulk-package && make clean
+done
+
+# Figure out optimal build order.
+cd ${USR_PKGSRC}
 if [ "$1" != "restart" ]; then
 	echo "Building dependency tree (this may take a while)..."
 	sh mk/bulk/printdepends > $DEPENDSTREEFILE
@@ -68,6 +84,7 @@ if [ "$1" != "restart" ]; then
 fi
 
 echo "Starting actual build using the order specified in $ORDERFILE..."
+cd ${USR_PKGSRC}
 nice -n 20 make \
 		USE_BULK_CACHE=yes \
 		SPECIFIC_PKGS=1 \
@@ -76,11 +93,23 @@ nice -n 20 make \
 
 echo "Build finished.  Removing all installed packages left over from build..."
 
-for pkg in `pkg_info`
+for pkgname in `pkg_info -e \*`
 do
-	if `pkg_info -qe $pkg`; then 
-		echo pkg_delete -r $pkg
-		pkg_delete -rR $pkg
+	if `pkg_info -qe $pkgname`; then 
+		pkgdir=`grep " $pkgname " $INDEXFILE | awk '{print $1}'`	
+		case "${BULK_PREREQ}" in 
+			*$pkgdir* ) 
+				echo "Keeping BULK_PREREQ: $pkgname ($pkgdir)" ;
+				;; 
+			* ) 
+				echo pkg_delete -r $pkgname
+				pkg_delete -r $pkgname
+				if `pkg_info -qe $pkgname` ; then
+					echo "$pkgname ($pkgdir) did not deinstall nicely.  Forcing the deinstall"
+					pkg_delete -f $pkgname || true 
+				fi 
+				;; 
+		esac
 	fi
 done
 
