--- a/math/gnumeric/Makefile
+++ b/math/gnumeric/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.27 2001/03/18 03:05:07 mjl Exp $
+# $NetBSD: Makefile,v 1.28 2001/03/19 13:23:43 tron Exp $
 #
 
 DISTNAME=		gnumeric-0.64
@@ -17,6 +17,7 @@ DEPENDS+=		libole2>=0.1.7:../../devel/libole2
 DEPENDS+=		oaf>=0.6.0:../../devel/oaf
 
 GNU_CONFIGURE=		YES
+USE_LIBINTL=		YES
 USE_LIBTOOL=		YES
 USE_X11BASE=		YES
 USE_PERL5=		YES
