--- a/mk/mk.conf.example
+++ b/mk/mk.conf.example
@@ -1,4 +1,4 @@
-# $NetBSD: mk.conf.example,v 1.181 2001/03/14 12:58:52 wiz Exp $
+# $NetBSD: mk.conf.example,v 1.182 2001/03/19 14:47:27 dmcmahill Exp $
 #
 
 # Sample /etc/mk.conf file, which can be used to set specific values
@@ -323,6 +323,15 @@
 # Used in egcs-current package to set bootstrap compile (two-stage)
 # mode.
 # Possible: defined, not defined
+# Default: not defined
+
+#BULK_PREREQ=
+# Used during bulk package builds.  Packages listed in this variable are
+# assumed to be required to build all packages.  Only a very limited number
+# of packages belong in this variable.  An example of an appropriate package
+# is pkgtools/xpkgwedge.  Currently pkgtools/digest is always added to this
+# list.
+# Possible: category/pkg
 # Default: not defined
 
 #CCLIENT_MBOX_FMT=	mbx
